SERVER-80482 shutdown resharding collectionClonerExecutor properly